@@ -1,3 +1,12 @@
+2015-10-05  Marek Polacek  <polacek@redhat.com>
+
+	Backport from mainline
+	2015-10-02  Marek Polacek  <polacek@redhat.com>
+
+	PR c/67730
+	* c-typeck.c (convert_for_assignment): Use the expansion point
+	location throughout.
+
 2015-09-30  Marek Polacek  <polacek@redhat.com>
 
 	Backport from mainline
